Spacing fix

--- a/frontend/src/assets/sass/complaint.scss
+++ b/frontend/src/assets/sass/complaint.scss
@@ -595,7 +595,6 @@ p {
     color: $gray-500;
     min-width: 191px;
     max-width: 191px;
-    padding: 10px 0px 0px 0px;
   }
 
   .checkbox-label {
