--- a/frontend/src/assets/sass/outcome-report.scss
+++ b/frontend/src/assets/sass/outcome-report.scss
@@ -162,12 +162,9 @@
         margin-top: 1px;
       }
 
-    label {
-        padding: 0 10px;
-    }
     .checkbox-label-padding
     {
-      padding: 10px 0 0 10px;
+      padding: 10px 0 0 0;
     }
     
     .checkbox-left-padding
